# tinyGraphicsEngine

./: .gitignore  CMakeLists.txt  compi.cmd  main.c  project.yml
lib/conio/: conio.h
src/: Types.h  assets.h  emulator.c  emulator.h  engine.c  engine.h  gpio.c  gpio.h  helpers.h  i2c.c  i2c.h  player.c  player.h  screenInterface.c  screenInterface.h  screenParams.h
test/: test_emulator.c  test_engine.c  test_gpio.c  test_helpers.c  test_i2c.c  test_player.c  test_screenInterface.c
test/templates/: tst_boilerplate.txt
